# semver

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  differences.md
.github/workflows/: ci.yml
cmake/: semverConfig.cmake.in
example_vcpkg_port/dpetkov-semver/: portfile.cmake  vcpkg.json
include/semver/: detail.hpp  semver.hpp
private-include/: detail.hpp
src/: semver.cpp
tests/: CMakeLists.txt  test_npm_extras.cpp  test_npm_spec.cpp  test_semver.cpp
